The frontend section was written, but I am having issues with testing-library/react

--- a/training/training.ipynb
+++ b/training/training.ipynb
@@ -811,7 +811,7 @@
    ],
    "source": [
     "model_version=3\n",
-    "model.export(f\"../models/{model_version}.h5\")"
+    "model.export(f\"../models/{model_version}\")"
    ]
   },
   {
